# hideo

./: CodingGuidelines.md  FAQ.md  Firmware.md  PCB.md  ProjectHome.md
cad/: hideo_case.dxf  hideo_facade.dxf
firmware/: BSDmakefile  COPYING  HiDeO.kontrollerlab  LICENSE  Makefile  Makefile.BSD  Makefile.am  a2d.c  a2d.h  app_date.c  app_date.h  app_eeprom.c  app_hqi.c  app_hqionoff.c  app_hqionoff.h  app_keyboard.c  app_keyboard.h  app_lens.c  app_lens.h  app_mainmenu.c  app_mainmenu.h  app_motor.c  app_motor.h  app_mouse.c  app_mouse.h  app_poweroff.h  app_poweron.c  app_status.h  app_temperature.c  app_temperature.h  app_template.c  app_template.h  application.h  autogen.sh  avrlibdefs.h  avrlibtypes.h  clist.h  configure.ac  dc-motor.c  display_control.c  (+57 more)
firmware/src/: BSDmakefile  Makefile.am  app_date.h  app_display.c  app_eeprom.c  app_eeprom.h  app_hqi.c  app_keyboard.h  app_lcd.c  app_mainmenu.h  app_motor.c  app_motor.h  app_mouse.c  app_mouse.h  app_power.c  app_poweron.c  app_screensaver.c  app_status.c  app_temperature.c  app_template.c  bitfield.h  clist.c  clist.h  daemon.h  display_control.c  display_control.h  drv_24lcxxx.c  drv_24lcxxx.h  drv_dc-motor.c  drv_dc-motor.h  drv_ds1307.c  drv_keyboard.c  drv_keyboard.h  drv_lm35.c  drv_nokia.h  drv_pcd8544.c  drv_ps2.c  drv_ps2_mouse.c  drv_pwm.c  drv_pwm.h  (+18 more)
pcbs/: avr_mainboard.sch  hideo.sch
trunk/cad/: hideo_case.dxf  hideo_facade_transparent_parts.dxf
trunk/debs/: kontrollerlab_0.7.1-0etch1_i386.deb
trunk/firmware/: BSDmakefile  HiDeO.kontrollerlab  Makefile  Makefile.BSD  a2d.h  app_date.c  app_date.h  app_display.c  app_eeprom.c  app_hqi.h  app_keyboard.c  app_lcd.c  app_lens.c  app_mainmenu.c  app_mainmenu.h  app_motor.c  app_motor.h  app_mouse.c  app_mouse.h  app_poweroff.c  app_poweron.h  app_screensaver.c  app_screensaver.h  app_status.c  app_temperature.c  app_template.c  application.h  bit_field.h  buffer.h  clist.c  clist.h  configure.ac  daemon.h  date.h  dc-motor.h  display_control.c  display_control.h  drv_24lc256.c  drv_24lc256.h  drv_24lcxxx.c  (+50 more)
trunk/firmware/src/: BSDmakefile  Makefile.am  a2d.c  a2d.h  app_display.c  app_display.h  app_eeprom.c  app_hqi.c  app_lcd.h  app_mainmenu.c  app_motor.c  app_power.c  app_power.h  app_poweroff.c  app_template.c  app_template.h  application.h  buffer.c  buffer.h  clist.c  date.h  display_control.c  drv_24lcxxx.c  drv_dc-motor.c  drv_dc-motor.h  drv_lm35.c  drv_lm35.h  drv_nokia.c  drv_pcd8544.h  drv_ps2.c  drv_ps2.h  drv_ps2_mouse.h  drv_pwm.c  drv_pwm.h  drv_stepper-motor.c  drv_stepper-motor.h  drv_videocontroller.c  drv_videocontroller.h  eeprom.h  eventmanager.h  (+15 more)
trunk/pcbs/: avr_mainboard.brd  hideo.brd
wiki/: CodingGuidelines.wiki  FAQ.wiki  Firmware.wiki  PCB.wiki
